--- a/Android/app/src/main/res/layout/activity_server.xml
+++ b/Android/app/src/main/res/layout/activity_server.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="text"
-            android:text="@string/ac_name"
+            android:hint="@string/ac_name"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="20dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="text"
-            android:text="@string/ac_ip"
+            android:hint="@string/ac_ip"
             app:layout_constraintTop_toBottomOf="@id/ac_name"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
